<resources>

    <string name="app_name">Note Manager</string>
    <string name="change_date">Изменить дату</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_on">Уведомления</string>
    <string name="night_theme_on">Темная тема</string>
    <string name="settings_app">Настройки</string>
    <string name="change_settings">Передерните ползунок</string>
    <string name="about_app">Приложения для ведения списка заметок</string>
    <string name="title_about_app">О приложении</string>
    <string name="author">com.d1m0hkrasav4ik.notemanager</string>
    <string name="year">2021</string>
    <string name="notes">Заметки</string>
    <string name="settings">Настройки</string>
    <string name="fragment_navigation">Главное меню</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="user_name">Дима Авдошин</string>
    <string name="save">сохранить</string>
    <string name="clear_all">Очистить все</string>
    <string name="add_notes">Добавить заметку</string>
    <string name="note_delete">Удалить</string>
    <string name="note_changed">Изменить</string>
    <string name="quest_delete">Вы желаете удалить эту карточку?</string>
    <string name="no">НЕТ</string>
    <string name="yes">Да</string>
    <string name="delete">Удаление</string>
</resources>